--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <head>
-
+<meta charset="UTF-8">
 <link rel="stylesheet" href="mapGame.css">
 <script type="text/javascript" src="countries.js"></script>
 <script type="text/javascript" src="mapGame.js"></script>
