--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDnaZp1gb5pC3KRkh4tkUX_ZYw
 </script>
 </head>
 <body>
-<h3>My Google Maps Demo</h3>
+<h3>Name that country</h3>
 <div id="map"></div>
 <div id="options"></div>
 </body>
